craft list done

--- a/src/app/craft-list/craft-list.component.html
+++ b/src/app/craft-list/craft-list.component.html
@@ -1,4 +1,4 @@
-<section class="movie-list-container">
+<section class="craft-list-container">
   @if(isLoading){
   <h1>Loading ⌛</h1>
   } @for (craft of craftList; track $index){
