--- a/src/app/crafts/crafts.component.html
+++ b/src/app/crafts/crafts.component.html
@@ -6,31 +6,39 @@
   />
   <mat-card-content>
     <div class="craft-spec">
-      <h2 class="craft-title">
+      <h3 class="craft-title">
         {{ craft.title }}
-        <button
-          mat-icon-button
-          aria-label="Toggle Summary"
-          (click)="showDescription()"
-        >
-          <mat-icon>{{
-            show ? "keyboard_arrow_up" : "keyboard_arrow_down"
-          }}</mat-icon>
-        </button>
-        <!-- <p class="movie-rating">⭐{{ movie.rating }}</p> -->
+      </h3>
 
-        <button mat-icon-button aria-label="Details of craft">
-          <mat-icon>info</mat-icon>
-        </button>
-      </h2>
-      <p class="craft-category">⭐ {{ craft.category }}</p>
+      <button
+        mat-icon-button
+        aria-label="Details of craft"
+        routerLink="/Crafts/{{ craft.id }}"
+      >
+        <mat-icon>info</mat-icon>
+      </button>
     </div>
 
-    @if(show) {
-    <p class="craft-summary">
-      {{ craft.description }}
-    </p>
-    }
+    <div class="category">
+      <button
+        mat-icon-button
+        aria-label="Toggle Summary"
+        (click)="showDescription()"
+      >
+        <mat-icon>{{
+          show ? "keyboard_arrow_up" : "keyboard_arrow_down"
+        }}</mat-icon>
+      </button>
+
+      @if(show) {
+      <p class="craft-summary">
+        {{ craft.description }}
+      </p>
+      }
+    </div>
+
+    <!-- <h6 class="craft-category">{{ craft.category }}</h6> -->
+
     <div class="action-buttons-container">
       <button mat-icon-button aria-label="Delete craft" (click)="deleteCraft()">
         <mat-icon>delete</mat-icon>
