--- a/src/app/crafts/crafts.component.scss
+++ b/src/app/crafts/crafts.component.scss
@@ -7,6 +7,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center ;  
+   
 }
 .craft-poster{
     height: 450px;
@@ -31,4 +32,9 @@
 .action-buttons-container{
   display: flex;
   justify-content: space-between;
+}
+
+.craft-category{
+    display: flex;
+    justify-content: space-between;
 }
