--- a/src/app/search-craft/search-craft.component.scss
+++ b/src/app/search-craft/search-craft.component.scss
@@ -4,3 +4,44 @@
    margin: 2.5rem 2.5rem;
    
 }
+
+
+.craft-container{
+    overflow: hidden;
+    width: 300px;
+}
+.craft-spec{
+    display: flex;
+    justify-content: space-between;
+    align-items: center ;  
+   
+}
+.craft-poster{
+    height: 450px;
+    width: 100%;
+   object-fit: cover;
+}
+
+ 
+.craft-category  {
+  font-size: 20px;
+
+}
+
+.craft-title{
+  font-size: 25px;
+  font-weight: bold;
+}
+
+.craft-category , .craft-title {
+  margin: 6px 0px;
+}
+.action-buttons-container{
+  display: flex;
+  justify-content: space-between;
+}
+
+.craft-category{
+    display: flex;
+    justify-content: space-between;
+}
