Implemented add functionality

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,6 +19,10 @@
     <li>
       <a routerLink=""><i class="fa-solid fa-user"></i></a>
     </li>
+
+    <li>
+      <a routerLink="/Crafts/add">Add Craft</a>
+    </li>
   </ul>
 </nav>
 
