edit functionality is working properly

--- a/src/app/craft-list/craft-list.component.html
+++ b/src/app/craft-list/craft-list.component.html
@@ -6,6 +6,7 @@
   <app-crafts
     [craft]="craft"
     (deleteCraftEvent)="deleteCraftP($event)"
+    (updateCraftEvent)="editCraftP($event)"
     [id]="craft.id"
   />
   }
