--- a/src/app/crafts/crafts.component.html
+++ b/src/app/crafts/crafts.component.html
@@ -43,12 +43,7 @@
       <button mat-icon-button aria-label="Delete craft" (click)="deleteCraft()">
         <mat-icon>delete</mat-icon>
       </button>
-      <button
-        mat-icon-button
-        aria-label="Edit Movie"
-        routerLink="edit/{{ craft.id }}"
-        (click)="editCraft()"
-      >
+      <button mat-icon-button aria-label="Edit Movie" (click)="editCraft()">
         <mat-icon>edit</mat-icon>
       </button>
     </div>
