--- a/src/app/edit-craft/edit-craft.component.html
+++ b/src/app/edit-craft/edit-craft.component.html
@@ -57,7 +57,7 @@
     mat-raised-button
     type="submit"
     style="color: white; background-color: #198e19"
-    (ngSubmit)="onSave()"
+    (click)="editCrafts()"
   >
     Save
   </button>
