--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,11 +17,17 @@
     <a routerLink=""><i class="fa-solid fa-house"></i></a>
     <li><a routerLink="/Crafts">Crafts</a></li>
     <li>
-      <a routerLink=""><i class="fa-solid fa-user"></i></a>
+      <a routerLink="/login"><i class="fa-solid fa-user"></i></a>
     </li>
 
     <li>
       <a routerLink="/Crafts/add">Add Craft</a>
+    </li>
+
+    <li>
+      <a routerLink="/Crafts/search"
+        ><i class="fa-solid fa-magnifying-glass"></i
+      ></a>
     </li>
   </ul>
 </nav>
