--- a/src/app/search-craft/search-craft.component.html
+++ b/src/app/search-craft/search-craft.component.html
@@ -1,11 +1,14 @@
 <link rel="preconnect" href="https://fonts.googleapis.com" />
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 <form [formGroup]="searchCraft" class="search-bar">
-  <input type="text" placeholder="search crafts..." formControlName="search" />
+  <input
+    type="search"
+    placeholder="search crafts..."
+    formControlName="search"
+  />
   <i class="fa-solid fa-magnifying-glass"></i>
 </form>
 
 @for (craft of crafts; track $index){
 <h2>{{ craft.title }}</h2>
-
 }
