--- a/src/app/add/add.component.html
+++ b/src/app/add/add.component.html
@@ -56,7 +56,7 @@
   <button
     mat-raised-button
     type="submit"
-    style="color: white; background-color: #198e19"
+    style="background-color: #9b1c93; color: white"
   >
     Add your Craft
   </button>
