--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -9,8 +9,9 @@ nav ul a{
 }
 .head
 {
-    background: #4f781f;
+    background: #9b1c93;
     height: 60px;
+    font-family: Roboto Condensed;
    
 }
 
@@ -28,5 +29,6 @@ nav ul
 h1{
     font-family: Jost;
     text-align: center;
+    
 }
 
