--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,13 +12,22 @@
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
 />
 
+<link rel="preconnect" href="https://fonts.googleapis.com" />
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<link
+  href="https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Inter:wght@100..900&family=Jost:ital,wght@0,100..900;1,100..900&family=Mukta:wght@200;300;400;500;600;700;800&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap"
+  rel="stylesheet"
+/>
+
 <nav class="head">
   <ul>
     <a routerLink=""><i class="fa-solid fa-house"></i></a>
-    <li><a routerLink="/Crafts">Crafts</a></li>
+
     <li>
       <a routerLink="/login"><i class="fa-solid fa-user"></i></a>
     </li>
+
+    <li><a routerLink="/Crafts">Crafts</a></li>
 
     <li>
       <a routerLink="/Crafts/add">Add Craft</a>
