--- a/src/app/crafts/crafts.component.html
+++ b/src/app/crafts/crafts.component.html
@@ -1,3 +1,9 @@
+<link rel="preconnect" href="https://fonts.googleapis.com" />
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<link
+  href="https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Inter:wght@100..900&family=Jost:ital,wght@0,100..900;1,100..900&family=Mukta:wght@200;300;400;500;600;700;800&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap"
+  rel="stylesheet"
+/>
 <mat-card class="craft-container">
   <img
     src="{{ craft.imageUrl }}"
@@ -40,10 +46,20 @@
     <!-- <h6 class="craft-category">{{ craft.category }}</h6> -->
 
     <div class="action-buttons-container">
-      <button mat-icon-button aria-label="Delete craft" (click)="deleteCraft()">
+      <button
+        mat-icon-button
+        aria-label="Delete craft"
+        (click)="deleteCraft()"
+        style="color: rgb(12, 34, 175)"
+      >
         <mat-icon>delete</mat-icon>
       </button>
-      <button mat-icon-button aria-label="Edit Movie" (click)="editCraft()">
+      <button
+        mat-icon-button
+        aria-label="Edit Movie"
+        (click)="editCraft()"
+        style="color: rgb(12, 34, 175)"
+      >
         <mat-icon>edit</mat-icon>
       </button>
     </div>
