--- a/src/app/crafts/crafts.component.scss
+++ b/src/app/crafts/crafts.component.scss
@@ -2,6 +2,10 @@
 .craft-container{
     overflow: hidden;
     width: 300px;
+    font-family: Roboto Condensed;
+
+
+    font-size: 16px;
 }
 .craft-spec{
     display: flex;
@@ -24,6 +28,7 @@
 .craft-title{
   font-size: 25px;
   font-weight: bold;
+  font-family: Roboto Condensed;
 }
 
 .craft-category , .craft-title {
