--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,13 +4,19 @@
   href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Jost:ital,wght@0,100..900;1,100..900&display=swap"
   rel="stylesheet"
 />
+<div>
+  <h1>
+    "Discover the art of blending classic techniques with modern vision in
+    handcrafted treasures.
+  </h1>
+  <!-- <img
+    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcShVrVDgxlP2J2xQhv3-Lm_vziy73YUKBSuyQ&s"
+    alt="Arts and Crafts"
+    style="align-items: center"
+  /> -->
+</div>
 
-<h1>
-  "Where creativity meets tradition: Discover the timeless beauty of handcrafted
-  art."
-</h1>
-
-<div class="intro-images">
+<!-- <div class="intro-images">
   <div class="home-page">
     <img
       src="https://5.imimg.com/data5/ANDROID/Default/2022/7/OI/IH/IU/156190139/prod-20220725-1037521382398187620809242-jpg-500x500.jpg"
@@ -30,7 +36,7 @@
       width="400px"
     />
   </div>
-</div>
+</div> -->
 
 <!-- <img
   src="https://authindia.com/wp-content/uploads/2020/01/HANDMADE1.jpeg"
