--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,31 +1,34 @@
 
+body{
+    
+    margin: 0;
+    min-height: 100vh;
+    display: grid;
+    place-content: center;
+}
+
 h1{
     font-family: Jost;
     text-align: center;
+    font-weight: 600;
+    margin-top: 15rem;
 }
 
-
-.intro-images
-{
-    display: flex;
-    flex-direction: column;
-    
-}
-
-.home-page > img
-{
-    height: 25rem;
-}
-
-@media(min-width : 500px )
-{
-    .intro-images
-{
-    display: flex;
-   
-    flex-direction: wrap;
-    gap: 2rem;
+img{
     align-items: center;
+}
+
+
+
+// @media(min-width : 500px )
+// {
+//     .intro-images
+// {
+//     display: flex;
+   
+//     flex-direction: wrap;
+//     gap: 2rem;
+//     align-items: center;
     
-}
-}
+// }
+// }
