--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -14,5 +14,11 @@
     <mat-label> Password</mat-label>
     <input matInput placeholder="Password" formControlName="password" />
   </mat-form-field>
-  <button mat-raised-button type="submit" color="primary">Login</button>
+  <button
+    mat-raised-button
+    type="submit"
+    style="background-color: #9b1c93; color: white"
+  >
+    Login
+  </button>
 </form>
