added css to search bar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,13 +30,7 @@
     <li><a routerLink="/Crafts">Crafts</a></li>
 
     <li>
-      <a routerLink="/Crafts/add">Add Craft</a>
-    </li>
-
-    <li>
-      <a routerLink="/Crafts/search"
-        ><i class="fa-solid fa-magnifying-glass"></i
-      ></a>
+      <a routerLink="/Crafts">Add Craft</a>
     </li>
   </ul>
 </nav>
