--- a/src/app/edit-craft/edit-craft.component.html
+++ b/src/app/edit-craft/edit-craft.component.html
@@ -56,8 +56,8 @@
   <button
     mat-raised-button
     type="submit"
-    style="color: white; background-color: #198e19"
     (click)="editCrafts()"
+    style="background-color: #9b1c93; color: white"
   >
     Save
   </button>
