--- a/src/app/search-craft/search-craft.component.html
+++ b/src/app/search-craft/search-craft.component.html
@@ -1,10 +1,12 @@
 <link rel="preconnect" href="https://fonts.googleapis.com" />
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
 <form [formGroup]="searchCraft" class="search-bar">
   <input
     type="search"
     placeholder="search crafts..."
     formControlName="search"
+    class="search-input"
   />
   <i class="fa-solid fa-magnifying-glass"></i>
 </form>
