--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,6 +24,10 @@
     <a routerLink=""><i class="fa-solid fa-house"></i></a>
 
     <li>
+      <a routerLink="/signup">SignUp</a>
+    </li>
+
+    <li>
       <a routerLink="/login"><i class="fa-solid fa-user"></i></a>
     </li>
 
