crud working with local host link

--- a/src/app/craft-details/craft-details.component.html
+++ b/src/app/craft-details/craft-details.component.html
@@ -22,4 +22,8 @@
     </div>
     <p class="craft-summary">{{ craft.description }}</p>
   </div>
+
+  <div class="price-tag">
+    <span class="amount">${{ craft.price }}</span>
+  </div>
 </div>
