--- a/src/app/crafts/crafts.component.html
+++ b/src/app/crafts/crafts.component.html
@@ -19,7 +19,7 @@
       <button
         mat-icon-button
         aria-label="Details of craft"
-        routerLink="/Crafts/{{ craft.id }}"
+        routerLink="/Crafts/{{ craft.craftId }}"
       >
         <mat-icon>info</mat-icon>
       </button>
