--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,6 +28,10 @@
     </li>
 
     <li><a routerLink="/Crafts">Crafts</a></li>
+
+    <!-- <li>
+      <a routerLink="/Crafts">Add Craft</a>
+    </li> -->
   </ul>
 </nav>
 
