--- a/src/app/craft-list/craft-list.component.scss
+++ b/src/app/craft-list/craft-list.component.scss
@@ -47,3 +47,11 @@
 .search-bar .search-input::placeholder {
   color: #aaa; 
 }
+
+.mat-snack-bar-container {
+  background-color: #323232; 
+  color: #fff; 
+  font-size: 14px;
+  border-radius: 4px;
+  padding: 12px;
+}
