search is working

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,7 +24,7 @@
     <a routerLink=""><i class="fa-solid fa-house"></i></a>
 
     <li>
-      <a routerLink="/login"><i class="fa-solid fa-user"></i></a>
+      <a routerLink="/loginUser"><i class="fa-solid fa-user"></i></a>
     </li>
 
     <li><a routerLink="/Crafts">Crafts</a></li>
