--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -1,29 +1,35 @@
-<form [formGroup]="signupForm" (ngSubmit)="usersignUp()" class="sign-form">
-  <mat-form-field>
-    <mat-label> Username</mat-label>
-    <input matInput placeholder="Username" formControlName="username" />
+<mat-card class="signup-box">
+  <form [formGroup]="signupForm" (ngSubmit)="usersignUp()" class="sign-form">
+    <mat-form-field>
+      <mat-label> Username</mat-label>
+      <input matInput placeholder="Username" formControlName="username" />
 
-    @if(username?.touched && username?.hasError('required') ){
-    <mat-error>Name is <strong>required</strong></mat-error>
-    } @if(username?.touched && username?.hasError('minlength') ){
-    <mat-error>Please provide full username </mat-error>
-    }
-  </mat-form-field>
+      @if(username?.touched && username?.hasError('required') ){
+      <mat-error>Name is <strong>required</strong></mat-error>
+      } @if(username?.touched && username?.hasError('minlength') ){
+      <mat-error>Please provide full username </mat-error>
+      }
+    </mat-form-field>
 
-  <mat-form-field>
-    <mat-label> Password</mat-label>
-    <input matInput placeholder="Password" formControlName="password" />
-  </mat-form-field>
+    <mat-form-field>
+      <mat-label> Password</mat-label>
+      <input matInput placeholder="Password" formControlName="password" />
+    </mat-form-field>
 
-  <mat-form-field>
-    <mat-label> Confirm Password</mat-label>
-    <input matInput placeholder="Password" formControlName="confirmPassword" />
-  </mat-form-field>
-  <button
-    mat-raised-button
-    type="submit"
-    style="background-color: #9b1c93; color: white"
-  >
-    Sign-up
-  </button>
-</form>
+    <mat-form-field>
+      <mat-label> Confirm Password</mat-label>
+      <input
+        matInput
+        placeholder="Password"
+        formControlName="confirmPassword"
+      />
+    </mat-form-field>
+    <button
+      mat-raised-button
+      type="submit"
+      style="background-color: #9b1c93; color: white"
+    >
+      Sign-up
+    </button>
+  </form>
+</mat-card>
