--- a/src/app/sign-up/sign-up.component.scss
+++ b/src/app/sign-up/sign-up.component.scss
@@ -3,6 +3,16 @@
     flex-direction: column;
     gap: 0.5rem;
   
-    max-width: 400px;
+    max-width: 100%;
     margin: 16px auto;
+  }
+
+  .signup-box
+  {
+    margin: 0;
+    min-height: 100vh;
+    display: grid;
+    place-content: center;
+  
+    
   }
