--- a/src/app/crafts/crafts.component.html
+++ b/src/app/crafts/crafts.component.html
@@ -65,10 +65,10 @@
 
       <button
         mat-icon-button
-        style="color: rgb(12, 34, 175)"
+        style="color: rgb(192, 17, 17)"
         (click)="addToCart()"
       >
-        <mat-icon><i class="fa-solid fa-cart-shopping"></i></mat-icon>
+        <mat-icon><i class="fa-solid fa-heart"></i></mat-icon>
       </button>
     </div>
   </mat-card-content>
