--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -1,6 +1,6 @@
 <mat-card class="signup-box">
   <form [formGroup]="signupForm" (ngSubmit)="usersignUp()" class="sign-form">
-    <mat-form-field>
+    <mat-form-field style="width: 300px">
       <mat-label> Username</mat-label>
       <input matInput placeholder="Username" formControlName="username" />
 
