--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <mat-card class="login-box">
   <form [formGroup]="loginForm" (ngSubmit)="login()" class="login-form">
-    <mat-form-field>
+    <mat-form-field style="width: 300px">
       <mat-label> Username</mat-label>
       <input matInput placeholder="Username" formControlName="username" />
 
