--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -9,11 +9,12 @@ nav ul a{
 }
 .head
 {
-    background: #9b1c93;
+    background: black;
     height: 60px;
     font-family: Roboto Condensed;
    
 }
+
 
 nav ul
 {
