--- a/src/app/edit-craft/edit-craft.component.html
+++ b/src/app/edit-craft/edit-craft.component.html
@@ -57,7 +57,7 @@
     mat-raised-button
     type="submit"
     (click)="editCrafts()"
-    style="background-color: #9b1c93; color: white"
+    style="background-color: #221021; color: white"
   >
     Save
   </button>
