--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,44 +1,35 @@
-<link rel="preconnect" href="https://fonts.googleapis.com" />
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-<link
-  href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Jost:ital,wght@0,100..900;1,100..900&display=swap"
-  rel="stylesheet"
-/>
-<div>
+<div class="container">
   <h1>
-    "Discover the art of blending classic techniques with modern vision in
+    Discover the art of blending classic techniques with modern vision in
     handcrafted treasures.
   </h1>
-  <!-- <img
-    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcShVrVDgxlP2J2xQhv3-Lm_vziy73YUKBSuyQ&s"
-    alt="Arts and Crafts"
-    style="align-items: center"
-  /> -->
+  <!-- <mat-card>
+    <div class="image">
+      <img
+        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcShVrVDgxlP2J2xQhv3-Lm_vziy73YUKBSuyQ&s"
+        alt="Arts and Crafts"
+      />
+    </div>
+  </mat-card> -->
+
+  <div class="intro-images">
+    <div class="home-page">
+      <img
+        src="https://5.imimg.com/data5/ANDROID/Default/2022/7/OI/IH/IU/156190139/prod-20220725-1037521382398187620809242-jpg-500x500.jpg"
+        alt="Craft Image 1"
+      />
+    </div>
+    <div class="home-page">
+      <img
+        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSjpE9Zy-PRqSBMFwSv-PBryCNK1cY9N3VASpsuhzb0TBQn9qJ01aoUjX33yqn7uirqxtg&usqp=CAU"
+        alt="Craft Image 2"
+      />
+    </div>
+    <div class="home-page">
+      <img
+        src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b4/William_Morris_design_for_Trellis_wallpaper_1862.jpg/800px-William_Morris_design_for_Trellis_wallpaper_1862.jpg"
+        alt="Craft Image 3"
+      />
+    </div>
+  </div>
 </div>
-
-<!-- <div class="intro-images">
-  <div class="home-page">
-    <img
-      src="https://5.imimg.com/data5/ANDROID/Default/2022/7/OI/IH/IU/156190139/prod-20220725-1037521382398187620809242-jpg-500x500.jpg"
-      alt=""
-    />
-  </div>
-  <div class="home-page">
-    <img
-      src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSjpE9Zy-PRqSBMFwSv-PBryCNK1cY9N3VASpsuhzb0TBQn9qJ01aoUjX33yqn7uirqxtg&usqp=CAU"
-      alt=""
-    />
-  </div>
-  <div class="home-page">
-    <img
-      src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQFFxl57Y6WieMiZm1jc2qa6YA3KUzSpMVoZQ&s"
-      alt=""
-      width="400px"
-    />
-  </div>
-</div> -->
-
-<!-- <img
-  src="https://authindia.com/wp-content/uploads/2020/01/HANDMADE1.jpeg"
-  alt="pottery-painting"
-/> -->
