--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -13,12 +13,17 @@
 
     <mat-form-field>
       <mat-label> Password</mat-label>
-      <input matInput placeholder="Password" formControlName="password" />
+      <input
+        matInput
+        placeholder="Password"
+        formControlName="password"
+        type="password"
+      />
     </mat-form-field>
     <button
       mat-raised-button
       type="submit"
-      style="background-color: #9b1c93; color: white"
+      style="background-color: black; color: white"
     >
       Login
     </button>
