--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -27,7 +27,7 @@
     <button
       mat-raised-button
       type="submit"
-      style="background-color: #9b1c93; color: white"
+      style="background-color: black; color: white"
     >
       Sign-up
     </button>
