--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,17 +9,41 @@
   href="https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Inter:wght@100..900&family=Jost:ital,wght@0,100..900;1,100..900&family=Mukta:wght@200;300;400;500;600;700;800&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap"
   rel="stylesheet"
 />
-
+<link rel="preconnect" href="https://fonts.googleapis.com" />
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<link
+  href="https://fonts.googleapis.com/css2?family=Baskervville+SC&family=Grey+Qo&family=Mukta:wght@200;300;400;500;600;700;800&display=swap"
+  rel="stylesheet"
+/>
+<link rel="preconnect" href="https://fonts.googleapis.com" />
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<link
+  href="https://fonts.googleapis.com/css2?family=Oleo+Script:wght@400;700&display=swap"
+  rel="stylesheet"
+/>
+<link rel="preconnect" href="https://fonts.googleapis.com" />
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<link
+  href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap"
+  rel="stylesheet"
+/>
 <nav class="head">
-  <ul>
-    <a routerLink=""><i class="fa-solid fa-house"></i></a>
+  <div class="header">
+    <ul>
+      <li class="logo">
+        <a
+          routerLink=""
+          style="font-family: Pacifico; font-weight: 300; font-size: 2rem"
+        >
+          Craftopia<i class="fa-solid fa-paintbrush"></i
+        ></a>
+      </li>
 
-    <li>
-      <a routerLink="/loginUser"><i class="fa-solid fa-user"></i></a>
-    </li>
-
-    <li><a routerLink="/Crafts">Crafts</a></li>
-  </ul>
+      <li class="login-icon">
+        <a routerLink="/loginUser"><i class="fa-solid fa-user"></i></a>
+      </li>
+    </ul>
+  </div>
 </nav>
 
 <router-outlet />
