--- a/src/app/sign-up/sign-up.component.scss
+++ b/src/app/sign-up/sign-up.component.scss
@@ -16,3 +16,20 @@
   
     
   }
+
+  mat-card
+{
+  background-image: url(https://media.istockphoto.com/id/626841510/photo/watercolor-and-oil-paints-brushes-pencils-pastel-crayon-on-table.jpg?s=612x612&w=0&k=20&c=KCuyj8N6w5lpevhK_ILkmrmhByylBmW0dXC_PtJhwWI=);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.browse
+{
+  font-family: Baskervville SC
+  ;
+
+  font-weight: 700;
+  //font-size: 2.5rem;
+}
