--- a/src/app/crafts/crafts.component.html
+++ b/src/app/crafts/crafts.component.html
@@ -70,6 +70,10 @@
       >
         <mat-icon><i class="fa-solid fa-heart"></i></mat-icon>
       </button>
+
+      <button mat-icon-button style="color: rgb(12, 34, 175)">
+        <mat-icon><i class="fa-solid fa-cart-shopping"></i></mat-icon>
+      </button>
     </div>
   </mat-card-content>
 </mat-card>
