--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -19,7 +19,15 @@
 
 <h1 class="browse" style="text-align: center">About Everything Art & Craft</h1>
 
-<p style="font-family: Mukta; text-align: center; line-height: 2; color: grey">
+<p
+  style="
+    font-family: Mukta;
+    text-align: center;
+    line-height: 2;
+    color: grey;
+    margin: 0 50px 30px 50px;
+  "
+>
   Welcome to Craftopia! You've arrived at the ultimate destination for all your
   art and craft inspiration. At Craftopia, we’re dedicated to helping you
   unleash your creativity and explore your artistic potential. Our platform is
@@ -31,11 +39,6 @@
 </p>
 
 <h1 style="text-align: center" class="browse">Browse our collections</h1>
-<div class="dropdown-content">
-  <a routerLink="/categories/knitting">Knitting</a>
-  <a routerLink="/categories/painting">Painting</a>
-  <a routerLink="/categories/sculpture">Sculpture</a>
-</div>
 
 <mat-card>
   <mat-card class="cards">
