--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -37,6 +37,7 @@
       type="submit"
       style="background-color: black; color: white"
       class="browse"
+      routerLink="/signup"
     >
       Sign-up
     </button>
