Done with user and admin

--- a/src/app/craft-list/craft-list.component.html
+++ b/src/app/craft-list/craft-list.component.html
@@ -30,6 +30,7 @@
     [craft]="craft"
     (deleteCraftEvent)="deleteCraftP($event)"
     (updateCraftEvent)="editCraftP($event)"
+    (addItemEvent)="addOneProduct($event)"
     [id]="craft.craftId"
   />
   }
