--- a/src/app/add/add.component.html
+++ b/src/app/add/add.component.html
@@ -55,7 +55,12 @@
 
   <mat-form-field>
     <mat-label>StockQuantity</mat-label>
-    <input matInput placeholder="Eg: 20" formControlName="StockQuantity" />
+    <input
+      type="number"
+      matInput
+      placeholder="Eg: 20"
+      formControlName="StockQuantity"
+    />
     @if(StockQuantity?.touched && StockQuantity?.hasError('required') ){
     <mat-error>StockQuantity is <strong>required</strong></mat-error
     >}
